Have different views for when auth token is invalid and is missing

--- a/ButterCMS.Starter/ButterCMS.Starter.csproj
+++ b/ButterCMS.Starter/ButterCMS.Starter.csproj
@@ -33,6 +33,7 @@
     <Folder Include="Views\Shared\Components\Header\" />
     <Folder Include="Views\Shared\Components\Footer\" />
     <Folder Include="Views\Error\" />
+    <Folder Include="Views\MissingAuthToken\" />
     <Folder Include="Attributes\" />
   </ItemGroup>
 </Project>
